<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.concerttickets.MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/txtTitle"
        android:textSize="48sp" />

    <EditText
        android:id="@+id/txtTickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/txtTickets"
        android:inputType="numberPassword"
        android:textSize="26sp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCost"
        android:layout_centerHorizontal="true"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtTickets"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="14dp"
        android:contentDescription="@string/description"
        android:src="@drawable/concert" />

    <Button
        android:id="@+id/btnCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_centerVertical="true"
        android:text="@string/btnCost"
        android:textSize="32sp" />

    <Spinner
        android:id="@+id/txtGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnCost"
        android:layout_below="@+id/txtTickets"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:entries="@array/txtGroup"
        android:prompt="@string/prompt" />

</RelativeLayout>
